k8s/apps/podinfo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9797"
      labels:
        app: podinfo
    spec:
      securityContext:
        runAsUser: 100
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.9.2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 100
            runAsGroup: 101
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
            - name: http-metrics
              containerPort: 9797
              protocol: TCP
            - name: grpc
              containerPort: 9999
              protocol: TCP
          command:
            - ./podinfo
            - --port=9898
            - --port-metrics=9797
            - --grpc-port=9999
            - --grpc-service-name=podinfo
            - --level=info
            - --random-delay=false
            - --random-error=false
          livenessProbe:
            exec:
              command:
                - podcli
                - check
                - http
                - localhost:9898/healthz
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - podcli
                - check
                - http
                - localhost:9898/readyz
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: fast-data
              mountPath: /data
            - name: fast-media
              mountPath: /data2/media
            - name: kdrive-data
              mountPath: /data2/kdrive-data
            - name: kdrive-media
              mountPath: /data2/kdrive-media
      volumes:
        #- name: data
        #  emptyDir: {}
        - name: fast-data
          persistentVolumeClaim:
            claimName: fast-data-pvc-v1
        - name: fast-media
          persistentVolumeClaim:
            claimName: fast-media-pvc-v1
        - name: kdrive-data
          persistentVolumeClaim:
            claimName: kdrive-data-pvc-v0
        - name: kdrive-media
          persistentVolumeClaim:
            claimName: kdrive-media-pvc-v0
