k8s/apps/podinfo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
spec:
  selector:
    app: ${NAME}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9898
  type: ClusterIP
