k8s/apps/podinfo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_ISSUER_PROD}
spec:
  rules:
    - host: podinfo.${BURGINFRA_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 80
  tls:
    - hosts:
        - podinfo.${BURGINFRA_HOST}
      secretName: podinfo-tls
